cambio de nombre al archivo principal
cambie de nombre a index.html para ver si funciona en netlify

--- a/tp-integrador/layouts/tickets.html
+++ b/tp-integrador/layouts/tickets.html
@@ -14,7 +14,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#listaHamburguesa">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="../tpIntegrador.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/codoacodo.png" alt="logo codo a codo" class="img-fluid" width="15%" height="15%">
                     Conf Bs As
                 </a>
